--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Prereq fix: bump version of Test::Script
 
 0.02      2019-02-16 09:35:48 -0500
   - First CPAN Release
